# CoDed

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DIAGRAMS.md  DIAGRAMS_2.md  LICENSE  MODELING_STRUCTURE.md  README.md  REPORT.md
.github/workflows/: github_ci.yaml
cmake/: FindGperftools.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/algo/: algo.cpp  algo.h
src/core/decoder/: decoder.h
src/core/encoder/: encoder.h
src/core/salt/: salt.h
src/impl/: CMakeLists.txt
src/impl/atbash/: atbash_algo.cpp  atbash_algo.h
src/impl/caesar/: caesar_algo.cpp  caesar_algo.h  caesar_salt.h
src/impl/playfair/: playfair_algo.cpp  playfair_algo.h
src/impl/rc4/: rc4_algo.cpp  rc4_algo.h
src/impl/trithemius/: trithemius_algo.cpp  trithemius_algo.h
src/impl/vernam/: vernam_algo.cpp  vernam_algo.h
src/impl/viginer/: viginer_algo.cpp  viginer_algo.h
tests/: CMakeLists.txt
tests/perfomance/: CMakeLists.txt  benchmark.cpp  benchmark_memory.cpp  helper.h  test_caesar_cipher.cpp
tests/unit/: CMakeLists.txt  helper.h  main.cpp  test_atbash_cipher.cpp  test_caesar_cipher.cpp  test_playfair_cipher.cpp  test_rc4_cipher.cpp  test_trithemius_cipher.cpp  test_vernam_cipher.cpp  test_viginer_algo.cpp
